apps/default/home-assistant/manifests/git-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-git-sync
  # Enable automatic reload when secret with env vars changes
  annotations:
    secret.reloader.stakater.com/reload: "git-credentials"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-git-sync
  template:
    metadata:
      labels:
        app: config-git-sync
    spec:
      containers:
        - name: git-sync-container
          image: databurst/git-sync:latest@sha256:6691653fc6279bcd76437fea6a138318b74c777a186f263c802a1f3f1f2a52bf
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: config
              mountPath: /app/sync
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
