apps/default/home-assistant/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  rules:
    # DNS will be replaced by kustomize
    - host: home.$(DNS)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
